k8s/base/kyverno-policies/restrict-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: enforce
  rules:
    - name: check-runAsNonRoot
      match:
        resources:
          kinds: [Pod]
          namespaces: [cloudmart-prod, cloudmart-staging]
      validate:
        message: "Containers must not run as root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: enforce
  rules:
    - name: check-privileged
      match:
        resources:
          kinds: [Pod]
          namespaces: [cloudmart-prod, cloudmart-staging]
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registry
spec:
  validationFailureAction: enforce
  rules:
    - name: check-registry
      match:
        resources:
          kinds: [Pod]
          namespaces: [cloudmart-prod, cloudmart-staging]
      validate:
        message: "Images must be pulled from the CloudMart ECR registry only."
        pattern:
          spec:
            containers:
              - image: "<AWS_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/cloudmart/*"
